--- a/style.css
+++ b/style.css
@@ -1,26 +1,123 @@
-.navbar{
+/* style.css */
+
+/* Style for header */
+header {
     display: flex;
-    padding: 20px;    
     justify-content: space-between;
-    border: 2px solid red;
-}
-
-.navbar .leftside{
     align-items: center;
-    display: flex;
-    border: 2px solid green;
+    background-color: #f8f8f8;
+    padding: 10px 20px;
 }
-.navbar .rightside{
-    display: flex;
-    border: 2px solid blue;
-}
-.navbar .midside{
-    cursor: pointer;
-    border-radius: 150px;
-    border: 2px solid yellow;
-    background-color: gray;
 
+.logo img {
+    width: 82px;
+    height: 22.5px;
 }
-.img{
-    width: 90px ;
+
+header div {
+    margin-right: 10px;
+}
+
+.right {
+    display: flex;
+    align-items: center;
+}
+.icon{
+    display: flex;
+    align-items: center;
+}
+
+.right input[type="text"] {
+    width: 300px;
+    border-radius: 50px;
+    padding: 5px;
+}
+
+.color {
+    padding: 5px 10px;
+    border: none;
+    cursor: pointer;
+}
+
+.f {
+    border-radius: 20px;
+    padding: 5px;
+    background-color:white;
+    color: rgb(0, 0, 0);
+}
+
+.s {
+    border-radius: 20px;
+    padding: 5px;
+    background-color:#4CAF50;
+    color: white;
+}
+
+/* Style for tags */
+.tags {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 20px;
+}
+
+.tag {
+    background-color: #f2f2f2;
+    padding: 5px 10px;
+    margin: 5px;
+    border-radius: 5px;
+}
+
+/* Add this CSS to your style.css file */
+
+.main {
+    display: flex;
+    text-align: center;
+    margin-left: 15px;
+}
+.text {
+    font-size: 24px;
+    color: #2d3e50;
+    line-height: 1.5;
+    margin-left: 15px;
+}
+.h {
+    font-size: 36px;
+    color:#14A800;
+    font-size: 70px;
+}
+.p {
+    flex-wrap: wrap;
+    margin-left: 20px;
+}
+.button{
+    font-size: 20px;
+    padding: 10px 20px;
+    color: white;
+    background-color: #14A800;
+    border-radius: 20px;
+    
+    padding: 5px;
+}
+.img img {
+    max-width: 70%;
+    height: auto;
+    
+}
+.A{
+    display: flex;
+    justify-content: flex-start;
+    color: gray;
+}
+.images{ 
+    display: flex;
+    gap: 20px;
+    height: 40px;
+    
+}
+.headerleft{
+    display: flex;
+    align-items: center;
+}
+.materialicons{
+    margin-top: 20px;
 }
